refactored colors and player into utils

--- a/FPS/FPS.vcxproj
+++ b/FPS/FPS.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="drawing.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drawing.h" />
