refactored drawing and map into drawing.cpp and map.cpp

--- a/FPS/FPS.vcxproj
+++ b/FPS/FPS.vcxproj
@@ -149,11 +149,13 @@
     <ClCompile Include="input.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="drawing.cpp" />
+    <ClCompile Include="map.cpp" />
     <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="drawing.h" />
     <ClInclude Include="input.h" />
+    <ClInclude Include="map.h" />
     <ClInclude Include="utils.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
